# nested-aad-scim-connector

./: .all-contributorsrc  .gitignore  DatabricksClient.py  Graph.py  README.md  TestAnalyseAndSync.py  analyse.py  cleanUpDemo.py  config.cfg.template  logger_config.py  main.py  pyproject.toml  requirements.txt  setup.py  test.py  testSync.py
PythonEndpoint/: FlattenAndSyncNestedGroups..py  FlattenAndSyncNestedGroups.py  SyncNestedGroups.py  main.py
config/: config.cfg.template
databricks/PythonEndpoint/: SyncNestedGroups.py
databricks/model/: DatabricksClient.py  Graph.py
databricks/notebooks/: SyncNestedGroups.py
model/: DatabricksClient.py  Graph.py
nestedaaddb/: __init__.py  databricks_client.py  graph_client.py  nested_groups.py
notebooks/: FlattenAndSyncNestedGroups.py  SyncNestedGroups.py  cleanUpDemo.py  main.py
