[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nestedaaddb"
version = "0.1.7"
description = "A package that allows to sync Nested AAD Group to DataBricks"
readme = "README.md"
authors = [{ name = "Abhishek Pratap Singh", email = "sumoaps@outlook.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ['Databricks', 'SCIM', 'nested AAD']
dependencies = ['azure-core', 'azure-identity','msgraph-core']
requires-python = ">=3.7"

